--- a/resources/web/index.html
+++ b/resources/web/index.html
@@ -61,18 +61,19 @@
 		<div class="client">
 			<div id="dashboard" class="container">
 				<div class="sect">
-					<div class="half">
+					<!-- disabled due to redisbungee incompat !-->
+					<!--<div class="half">
 						<div class="inner servers">
 							<h1 data-lang="dashboard.servers"> <span></span></h1>
 							<ul class="log"></ul>
 						</div>
-					</div>
-					<div class="half">
+					</div>!-->
+					<!--<div class="half">!-->
 						<div class="inner logs">
 							<h1 data-lang="dashboard.latestlogs"> <span></span></h1>
 							<ul class="log"></ul>
 						</div>
-					</div>
+					<!--</div>!-->
 				</div>
 				<div class="graph" id="graph-dashboard" data-permission="stats"></div>
 			</div>
